Fixed Safari overflow bug

--- a/src/styles/ViewWindow.css
+++ b/src/styles/ViewWindow.css
@@ -6,7 +6,8 @@
 }
 
 .view-display {
-  overflow: hidden scroll;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   background-color: rgba(128,128,128,0.3);
   border: 1px solid white;
   border-radius: 1rem;
